[package]
name = "testing-sea-orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0.12.0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
futures = "0.3.28"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
version = "^0.12.0"
features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls"
]
